Attempting to fix smooth scrolling on iOS some more

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,10 @@ a, li {
     list-style: none;
 }
 
+.scroll {
+    overflow-y: scroll;
+}
+
 header {
     background-color: var(--dark-color);
     position: absolute;
